syntax = "proto3";
import "oracle/spectra/database/proto/CommandModel.proto";
option java_package = "oracle.spectra.database";

service DatabaseProxy {
      rpc ExecuteCommand(stream DatabaseCommand) returns (stream DatabaseResult) {}
}

